# learn_cv

./: .gitignore  CMakeLists.txt  CamConfig.yml
include/: utility.hpp
include/calibration/: Chessboard.h  ChessboardCorner.h  ChessboardQuad.h  ExtrinsicCalibrator.h  Spline.h
scripts/: drawTrajectories.py
src/: CMakeLists.txt
src/Homography/: pose_from_homography.cpp
src/aruco/: CMakeLists.txt  arucoDetection.cpp
src/basic/: CMakeLists.txt  NEON_2_SSE.h  check_mat_flags.cpp  gaussian_blur.cpp
src/calibration/: CMakeLists.txt  Chessboard.cc  ExtrinsicCalibrator.cc  calibrateWithAruco.cpp  calibrateWithChessboard.cpp  calibrateWithChessboardMatlab.cpp  extrinsicCalibrateBetweenCameraOdom.cpp  extrinsicCalibrateSimulation.cpp  undistortImage.cpp
src/homography/: CMakeLists.txt  decompose_homography.cpp  homography_from_camera_displacement.cpp  perspective_correction.cpp  pose_from_homography.cpp
