

add_executable(test_arucoDetection test_arucoDetection.cpp)
target_link_libraries(test_arucoDetection ${OpenCV_LIBS})

#add_executable(test_boardDetection test_boardDetection.cpp)
#target_link_libraries(test_boardDetection ${OpenCV_LIBS})

#add_executable(test_charucoDetection test_charucoDetection.cpp)
#target_link_libraries(test_charucoDetection ${OpenCV_LIBS})
