

#add_executable(arucoDetection arucoDetection.cpp)
#target_link_libraries(arucoDetection ${OpenCV_LIBS})

#add_executable(boardDetection boardDetection.cpp)
#target_link_libraries(boardDetection ${OpenCV_LIBS})

#add_executable(charucoDetection charucoDetection.cpp)
#target_link_libraries(charucoDetection ${OpenCV_LIBS})
